use BusVoltagePerTargetVoltage from core
Signed-off-by: Gael Macherel <gael.macherel@artelys.com>